--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
+# Ignore all
+*
+
+# Unignore all with extensions
+!*.*
+
+# Unignore all dirs
+!*/
+
+### Above combination will ignore all files without extension ###
+
 # Compiled Object files, Static and Dynamic libs (Shared Objects)
 *.o
 *.a
